Revision: miles@gnu.org--gnu-2004/emacs--cvs-trunk--0--patch-541
Merge from gnus--rel--5.10

Patches applied:

 * miles@gnu.org--gnu-2004/gnus--rel--5.10--patch-24
   lisp/nnimap.el (nnimap-open-connection): Remove extraneous end-paren

--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-10  Miles Bader  <miles@gnu.ai.mit.edu>
+
+	* nnimap.el (nnimap-open-connection): Remove extraneous end-paren.
+
 2004-09-10  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* nnimap.el (nnimap-open-connection): allow 'imaps' as a synonym
