*** empty log message ***

--- a/admin/ChangeLog
+++ b/admin/ChangeLog
@@ -1,6 +1,8 @@
 2004-09-11  Kim F. Storm  <storm@cua.dk>
 
 	* FOR-RELEASE (New features): Remove Gnus 5.10 entry (Done!).
+	(Documentation): Add NEWS entry.
+	Add section lists for proof-reading Emacs and Lisp manuals.
 
 2004-08-29  Kim F. Storm  <storm@cua.dk>
 
