--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2004-09-12  Stefan  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/checkdoc.el (checkdoc-this-string-valid-engine):
+	Don't tell to use \\{...} when it's already done.
+
 	* textmodes/bibtex.el (bibtex-generate-url-list): Change format.
 	Provide a sample complex default.
 	(bibtex-url, bibtex-font-lock-url): Adapt to new format.
