--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-13  Kim F. Storm  <storm@cua.dk>
+
+	* isearch.el (isearch-resume-in-command-history): Rename from
+	isearch-resume-enabled and change default to nil.
+
 2004-09-12  Stefan  <monnier@iro.umontreal.ca>
 
 	* vc-hooks.el (vc-ignore-dir-regexp): New var.
