--- a/etc/NEWS
+++ b/etc/NEWS
@@ -1496,28 +1496,30 @@ per line.  Lines beginning with space or tab are ignored.
 **** The `::' qualifier triggers C++ parsing in C file.
 Previously, only the `template' and `class' keywords had this effect.
 
-**** In Perl, packages are tags.
-Subroutine tags are named from their package.  You can jump to sub tags
-as you did before, by the sub name, or additionally by looking for
-package::sub.
-
-**** New language PHP.
-Tags are functions, classes and defines.
-If the --members option is specified to etags, tags are vars also.
-
 **** New language HTML.
 Title and h1, h2, h3 are tagged.  Also, tags are generated when name= is
 used inside an anchor and whenever id= is used.
-
-**** New default keywords for TeX.
-The new keywords are def, newcommand, renewcommand, newenvironment and
-renewenvironment.
 
 **** In Makefiles, constants are tagged.
 If you want the old behavior instead, thus avoiding to increase the
 size of the tags file, use the --no-globals option.
 
+**** In Lua, all functions are tagged.
+
+**** In Perl, packages are tags.
+Subroutine tags are named from their package.  You can jump to sub tags
+as you did before, by the sub name, or additionally by looking for
+package::sub.
+
 **** In Prolog, etags creates tags for rules in addition to predicates.
+
+**** New language PHP.
+Tags are functions, classes and defines.
+If the --members option is specified to etags, tags are vars also.
+
+**** New default keywords for TeX.
+The new keywords are def, newcommand, renewcommand, newenvironment and
+renewenvironment.
 
 *** Honour #line directives.
 When Etags parses an input file that contains C preprocessor's #line
@@ -1529,7 +1531,7 @@ writes tags pointing to the source file.
 *** New option --parse-stdin=FILE.
 This option is mostly useful when calling etags from programs.  It can
 be used (only once) in place of a file name on the command line.  Etags
-reads from standard input and mark the produced tags as belonging to
+reads from standard input and marks the produced tags as belonging to
 the file FILE.
 
 +++
